Fix security vulnerabilities and improve gist display
- Implement per-user cache isolation to prevent cross-user data leakage
- Add smart title generation from filenames for gists without descriptions
- Fix API connection between frontend and backend
- Update all components to pass authentication tokens properly
- Enhance gist preview generation with file metadata
- Clean up CSS and remove redundant styles

--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
     "@types/node": "^22.9.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
-    "marked": "^14.1.2",
     "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,7 +38,7 @@
     "rules": {
       "import/no-anonymous-default-export": "off",
       "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
-      "no-console": "off"
+      "no-console": ["warn", { "allow": ["error", "warn"] }]
     }
   },
   "browserslist": {
